# RaspberrySpeaker

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml  test.py
.claude/: CLAUDE.md
.github/ISSUE_TEMPLATE/: simple.md
.github/workflows/: ci.yml
docs/: architecture.md
manual_tests/: demo_realtime.py  demo_recorder.py  demo_stream.py
models/porcupine/acoustic/: README.md
models/porcupine/wakewords/: README.md
src/: __init__.py  async_demo.py  dummy_impls.py  interfaces.py  main.py  pipeline.py  settings.py
src/audio/: __init__.py  device.py  noise.py  player.py  recorder.py  stream.py  utils.py
src/dev/: dummy_impls.py
src/realtime/: __init__.py  realtime.py  relatime.py  types.py
src/stt/: __init__.py
src/wake/: __init__.py  dummy_wake.py  porcupine_wake.py  wake.py
tests/: demo_noise.py  demo_porcupine_wake.py  demo_recorder.py  demo_stream.py  test_audio_noise.py  test_audio_processing.py  test_contract.py
